--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ body.boss{ animation: shake .3s infinite; }
 </div>
 
 <!-- SETTINGS -->
-<div id="settingsBtn">⚙️</div>
+<div id="settingsBtn"> </div>
 <div id="settingsPanel">
   <div style="display:flex; justify-content:space-between; align-items:center;">
     <h1 style="margin:0; font-size:1.5rem;">Settings</h1>
